--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=usermanagementsystem
 spring.datasource.url=jdbc:mysql://localhost:3306/user_management_system
 spring.jpa.hibernate.ddl-auto=update
-spring.config.import=secrets.properties
+spring.config.import=secret.properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.port=2025
